test Spring copy and paste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ quarkus.datasource.db-kind = mariadb
 quarkus.datasource.username = root
 quarkus.datasource.password = admin
 quarkus.datasource.jdbc.url = jdbc:mariadb://localhost:3306/micole?useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-
+quarkus.hibernate-orm.physical-naming-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+quarkus.hibernate-orm.implicit-naming-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 # drop and create the database at startup (use `update` to only update the schema)
 #quarkus.hibernate-orm.database.generation = drop-and-create
+jhipster.clientApp.name=xcz
